# opennotes

./: .gitignore  CONTRIBUTING.md  README.md  astro.config.mjs  bun.lockb  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  docs-ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.2-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  sherpa-upgrade-path.md
src/: App.css  App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  macos-permissions.json
src-tauri/cpp/: safe_sherpa.cpp
src-tauri/migrations/: 001_initial.sql  002_phase4_session.sql  003_phase6_library.sql  004_phase14_post_processing.sql  005_phase15_whisper.sql  006_phase17_diarization.sql
src-tauri/src/: commands.rs  db.rs  download.rs  lib.rs  ollama_catalog.rs  session.rs  tray.rs  widget.rs
src-tauri/src/audio/: capture.rs  encoder.rs  mixer.rs  mod.rs
src-tauri/src/diarization/: decode.rs  mod.rs  model.rs  worker.rs
src-tauri/src/llm/: detect.rs  mod.rs  setup.rs
src-tauri/src/transcription/: mod.rs  model.rs  resampler.rs  safe_recognizer.rs  worker.rs
src/components/: ManageTemplatesModal.tsx  SpeakerPopover.tsx  SpeakerStatsPanel.tsx  SpeakerTimeline.tsx  SpeakerTranscript.tsx  SummaryError.tsx  SummaryExport.tsx  SummaryPanel.tsx  TemplateCreateModal.tsx  TemplatePicker.tsx  speakerUtils.ts
src/contexts/: ModelSetupContext.tsx  OllamaSetupContext.tsx  SessionContext.tsx  SummaryGenerationContext.tsx  ToastContext.tsx  UpdateContext.tsx
src/hooks/: useDiarization.ts  useLibrary.test.ts  useLibrary.ts  useModelSetup.ts  useOllamaSetup.ts  useRecording.ts  useSession.ts  useSettings.ts  useSummary.ts  useTemplates.ts  useTheme.ts  useTranscript.ts  useUpdate.ts
src/i18n/: i18next.d.ts  index.ts
src/layouts/: LandingLayout.astro
src/lib/: constants.ts  db.ts  export.ts  libraryFilterParams.test.ts  libraryFilterParams.ts  platform.ts  (+6 more)
(+139 files in other folders)
