[package]
name = "tauri-app"
version = "0.1.0"
description = "openNotes desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
home = "=0.5.11"
time-core = "=0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
