[package]
name = "tauri-app"
version = "0.1.0"
description = "openNotes desktop app"
authors = ["you"]
edition = "2021"
default-run = "tauri-app"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
libopusenc = "0.2"
# Pinned: sherpa-rs-sys binary compat; see .planning/research/sherpa-upgrade-path.md
sherpa-rs = { version = "=0.6.8", features = ["download-binaries"] }
sherpa-rs-sys = { version = "=0.6.8", features = ["download-binaries"] }
rubato = "0.15"
ogg = "0.9"
opus = "0.3"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
zip = { version = "2", features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2"
